examples/test/testpolicy5269.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5269
  namespace: namespace392
spec:
  podSelector:
    matchLabels:
      key31: value48
      key8: value38
      key39: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value48
      podSelector:
        matchLabels:
          key27: value28
